--- a/COTE.vcxproj.filters
+++ b/COTE.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="1_greedy_boj_1931.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="2_dp_boj_11052.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
