dp concept - cannot solve yet

--- a/COTE.vcxproj.filters
+++ b/COTE.vcxproj.filters
@@ -33,5 +33,8 @@
     <ClCompile Include="2_dp_boj_11052.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="2_dp_boj_9465.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
