--- a/COTE.vcxproj.filters
+++ b/COTE.vcxproj.filters
@@ -33,7 +33,10 @@
     <ClCompile Include="2_dp_boj_11052.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="2_dp_boj_9465.cpp">
+    <ClCompile Include="2%40_dp_boj_9465.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="2_dp_boj_9461.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
