--- a/COTE.vcxproj.filters
+++ b/COTE.vcxproj.filters
@@ -39,5 +39,8 @@
     <ClCompile Include="2_dp_boj_9461.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="2_dp_boj_2293.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
