--- a/COTE.vcxproj.filters
+++ b/COTE.vcxproj.filters
@@ -42,5 +42,11 @@
     <ClCompile Include="2_dp_boj_2293.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="2_dp_boj_1965.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="2_dp_boj_1965_lis.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
