--- a/COTE.vcxproj.filters
+++ b/COTE.vcxproj.filters
@@ -48,5 +48,8 @@
     <ClCompile Include="2_dp_boj_1965_lis.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="2_dp_boj_2167.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
