--- a/COTE.vcxproj.filters
+++ b/COTE.vcxproj.filters
@@ -54,5 +54,8 @@
     <ClCompile Include="2_dp_boj_11726.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="2_dp_boj_10844.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
