--- a/COTE.vcxproj.filters
+++ b/COTE.vcxproj.filters
@@ -63,5 +63,8 @@
     <ClCompile Include="2_dp_boj_11057.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="3_dfs_boj_11403.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
