--- a/COTE.vcxproj.filters
+++ b/COTE.vcxproj.filters
@@ -66,5 +66,8 @@
     <ClCompile Include="3_dfs_boj_11403.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="3_dfs_boj_1260.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
