dfs w/ brute force

--- a/COTE.vcxproj.filters
+++ b/COTE.vcxproj.filters
@@ -69,5 +69,8 @@
     <ClCompile Include="3_dfs_boj_1260.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="3_dfs_boj_6603.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
