--- a/COTE.vcxproj.filters
+++ b/COTE.vcxproj.filters
@@ -78,5 +78,8 @@
     <ClCompile Include="3_dfs_boj_10026.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="3_dfs_boj_1260_again2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
