--- a/COTE.vcxproj.filters
+++ b/COTE.vcxproj.filters
@@ -81,5 +81,8 @@
     <ClCompile Include="3_dfs_boj_1260_again2.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="4_array_boj_2920.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
