--- a/COTE.vcxproj.filters
+++ b/COTE.vcxproj.filters
@@ -84,5 +84,8 @@
     <ClCompile Include="4_array_boj_2920.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="4_array_boj_10818.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
