--- a/COTE.vcxproj.filters
+++ b/COTE.vcxproj.filters
@@ -87,5 +87,8 @@
     <ClCompile Include="4_array_boj_10818.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="4_array_boj_4344.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
