--- a/COTE.vcxproj.filters
+++ b/COTE.vcxproj.filters
@@ -90,5 +90,8 @@
     <ClCompile Include="4_array_boj_4344.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="2_dp_boj_2748.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
