stack => LIFO == latest element

--- a/COTE.vcxproj.filters
+++ b/COTE.vcxproj.filters
@@ -96,5 +96,8 @@
     <ClCompile Include="5_stack_boj_1874.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="5_stack_boj_17298.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
