stack : cautious when using s.top() and s.pop()

--- a/COTE.vcxproj.filters
+++ b/COTE.vcxproj.filters
@@ -99,5 +99,8 @@
     <ClCompile Include="5_stack_boj_17298.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="5_stack_boj_2504.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
