queue using vector

--- a/COTE.vcxproj.filters
+++ b/COTE.vcxproj.filters
@@ -102,5 +102,8 @@
     <ClCompile Include="5_stack_boj_2504.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="6_queue_boj_1966.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
