--- a/COTE.vcxproj.filters
+++ b/COTE.vcxproj.filters
@@ -105,5 +105,8 @@
     <ClCompile Include="6_queue_boj_1966.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="5_stack_boj_1935.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
