--- a/COTE.vcxproj.filters
+++ b/COTE.vcxproj.filters
@@ -108,5 +108,8 @@
     <ClCompile Include="5_stack_boj_1935.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="5_stack_boj_1918.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
