--- a/COTE.vcxproj.filters
+++ b/COTE.vcxproj.filters
@@ -123,5 +123,11 @@
     <ClCompile Include="7_string_boj_1764.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="7_string_boj_10988.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="7_string_obj_11656.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
