--- a/COTE.vcxproj.filters
+++ b/COTE.vcxproj.filters
@@ -129,5 +129,14 @@
     <ClCompile Include="7_string_obj_11656.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="7_string_boj_10987.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="7_string_boj_5598.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="7_string_boj_1764_again.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
