--- a/COTE.vcxproj.filters
+++ b/COTE.vcxproj.filters
@@ -141,5 +141,8 @@
     <ClCompile Include="7_string_boj_2789.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1_boj_greedy_2529.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
