--- a/COTE.vcxproj.filters
+++ b/COTE.vcxproj.filters
@@ -159,5 +159,8 @@
     <ClCompile Include="2_dp_boj_11051.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="2_dp_boj_9465.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
