--- a/COTE.vcxproj.filters
+++ b/COTE.vcxproj.filters
@@ -33,9 +33,6 @@
     <ClCompile Include="2_dp_boj_11052.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="2%40_dp_boj_9465.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="2_dp_boj_9461.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
@@ -160,6 +157,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="2_dp_boj_9465.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="8_tree_boj_1991.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
